--- a/error-first-approach/package.json
+++ b/error-first-approach/package.json
@@ -13,7 +13,6 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7",
-    "uuid": "^8.3.2"
+    "nodemon": "^2.0.7"
   }
 }
