--- a/async-await-approach/package.json
+++ b/async-await-approach/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,8 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "jest": "^26.6.3",
+    "jest-each": "^26.6.2",
     "mongoose": "^5.12.2",
     "nodemon": "^2.0.7"
   }
