--- a/async-await-approach/package.json
+++ b/async-await-approach/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "axios": "^0.21.1",
     "jest": "^26.6.3",
     "jest-each": "^26.6.2",
     "mongoose": "^5.12.2",
